--- a/vushop-services/src/main/resources/application.properties
+++ b/vushop-services/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.naming.strategy=
+spring.jpa.properties.hibernate.naming.strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 
